--- a/SMPv2/app/src/main/res/values/strings.xml
+++ b/SMPv2/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SMPv2</string>
+    <string name="app_name">SP</string>
     <string name="title_activity_maps">SuperPoints</string>
     <string name="channel_name">Notif Name</string>
     <string name="channel_description">Notif Desc</string>
