--- a/SMPv2/app/src/main/res/values/strings.xml
+++ b/SMPv2/app/src/main/res/values/strings.xml
@@ -8,10 +8,9 @@
 
 
 
-    <string name="add_promotion_points">How many points does this promotion need to be redeemed?</string>
+    <string name="add_promotion_points">How many points does this promotion need to be redeemed? (default 0)</string>
     <string name="add_promotion_details">What should we say about your promotion?</string>
     <string name="add_promotion_submit">All Done!</string>
-    <string name="add_promotion_minimum_points">The minimum points will be 0 if nothing is entered.</string>
 
     <string name="delete_promotion_title">Are you sure?</string>
     <string name="delete_promotion_submit">Yes</string>
