Work on phase 2 tasks

--- a/SMPv2/app/src/main/res/values/strings.xml
+++ b/SMPv2/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
 
     <string name="super_slide_title">Super</string>
     <string name="points_slide_title">Points</string>
+    <string name="title_activity_business_settings">BusinessSettingsActivity</string>
 </resources>
