--- a/SMPv2/app/src/main/res/values/strings.xml
+++ b/SMPv2/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
 
     <string name="minimum_tier_for_promo">Minimum Tier:</string>
 
+    <string name="notif_business_nearby">SuperPoints are up for grabs near you!</string>
+
 </resources>
