Setup app admin

--- a/SMPv2/app/src/main/res/values/strings.xml
+++ b/SMPv2/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="minimum_tier_for_promo">Minimum Tier:</string>
 
     <string name="notif_business_nearby">SuperPoints are up for grabs near you!</string>
+    <string name="send_email_title">Send KPI</string>
 
 </resources>
