--- a/SMPv2/app/src/main/res/values/strings.xml
+++ b/SMPv2/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
 
     <string name="notif_business_nearby">SuperPoints are up for grabs near you!</string>
     <string name="send_email_title">Send KPI</string>
+    <string name="send_email_monthly">Send KPIs Monthly</string>
 
 </resources>
