--- a/SMPv2/app/src/main/res/values/strings.xml
+++ b/SMPv2/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
 
     <string name="notif_business_nearby">SuperPoints are up for grabs near you!</string>
     <string name="send_email_title">Send KPI</string>
-    <string name="send_email_monthly">Send KPIs Monthly</string>
+    <string name="send_email_monthly">Send KPIs Monthly</string>\
+
+    <string name="business_region">Business Region:</string>
 
 </resources>
