graphical changes + interval changes in maps

--- a/SMPv2/app/src/main/res/values/strings.xml
+++ b/SMPv2/app/src/main/res/values/strings.xml
@@ -40,4 +40,8 @@
 
     <string name="admin_business_information"><u>Businesses</u></string>
 
+    <string name="analytics_pie">Number Of New/Old Visitors</string>
+    <string name="analytics_line">Number Of Visits In The Last 12 Months</string>
+    <string name="analytics_bar">Number of Users per Tier</string>
+
 </resources>
